[tool.poetry]
name = "beacon3-fastapi"
version = "0.1.0"
description = ""
authors = ["Craig Derington <craigderington17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
celery = "4.4.7"
uvicorn = "^0.14.0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
